001/nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  namespace: argocd-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-frontend
  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      containers:
      - name: nginx-frontend
        image: nginx:latest
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        resources:
          limits:
            memory: "32Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
      volumes:
      - name: html-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend-service
  namespace: argocd-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx-frontend
  ports:
    - name: http
      protocol: TCP
      port: 10000
      targetPort: 80
    - name: https
      protocol: TCP
      port: 10001
      targetPort: 443
