001/argocd-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-nginx-ingress
  namespace: argocd-nginx
  labels:
    app: nginx-frontend
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - # host: "http://<your-domain.com>"
    http:
      paths:
      - # path: /blogz
        # The below one is used to manage static files 
        path: /argocd-nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-frontend-service
            port:
              number: 80
